objects/ssot__PatientMedicationReconciliation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConductedById__c</fullName>
        <label>Conducted By</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Medication Reconciliation Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessEndDateTime__c</fullName>
        <label>Process End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessStartDateTime__c</fullName>
        <label>Process Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ReconciliationStatus__c</fullName>
        <label>Reconciliation Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDateTime__c</fullName>
        <label>Source System Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721967220_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationReconciliation_Pati_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PatientMedicationReconciliation_Pati_rel</relationshipLabel>
        <relationshipName>rel_1716721967220_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721969977_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationReconciliation_Cond_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>PatientMedicationReconciliation_Cond_rel</relationshipLabel>
        <relationshipName>rel_1716721969977_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>